Volt Research Emulator (Experimental IBM PC emulator)

Pre-Alpha 1.2
XX XXXXXX 2025

Changes:

=== EMULATION ===

8086:
* Add string instructions
* Fix GRP1 16-to-8 variant (0x83)
* Fix POP segreg

Peripherals:

=== CORE SYSTEMS ===
* Fix closing files
* Much more comprehensive shutdown functions


Pre-Alpha 1.0/1.1
23/27 August 2025

Changes:

=== EMULATION ===
* I/O system added
* DMA 8237 controller added (non-working enough to pass tests)
* PIT 8259 added (enough to pass tests)
* Components now receive a pointer to their attached machine
* Added function (GetComponentWithClass<T*>) to find a component of a certain class
* XTv3 BIOS (1986) reaches 16k RAM test

8086:
* Stack implemented
* GRP4/GRP5 implemented 
* RET, NEAR CALL, FAR CALL implemented
* LOOP implemented 
* Fix many MOVs
* Fix the zero flag
* Fix 16-bit CMP 
* Fix segment overrides
* 9F POP + A0-A3 MOV added
* XCHG added
* Pop/push segreg added
* PUSH/POPF added
* TEST added
* Interrupts implemetned

=== CORE SYSTEMS ===
* Emulation runs on its own thread separate to everything else

Pre-Alpha 0.9
21 August 2025

Changes:
	* IBM PC BIOS now runs up to the point of requiring I/O
	* ADD, OR, ADC, SBB, AND, SUB, XOR, CMP implemented 
	* GRP2 implemented
	* HLT implemented 
	

=== OLD VOLT NOTES ===

Changes:

Pre-Alpha 0.8
16 August 2025

=== EMULATION ===

=== CORE SYSTEMS ===
Memory:
	* Can now allocate arrays of objects
	* Print tags as strings
Command:
	* Add Command_GetTextAfterCommand to get text of command
	* Add cvarlist command to list cvars
	* Add meminfo command to list memory areas
	* Fix exec function commands being read twice
Filesystem:
	* Fix ReadString
Render:
	* Split renderer state into global and renderer-specific
	* Don't use a temporary variable for the render title convar
Logging:
	* Use cout for some messages
	

	
===== OLD S7 NOTES =====

Pre-Alpha 0.7
29 June 2025 (Was busy)

Changes:
* Moved from MSVC to GCC (mingw64-msys2 on windows)
* Implement the filesystem subsystem