@@ -1,0 +1,8 @@
+emu_8086_use_8088 1
+
+machine_add_component cpu8086
+machine_add_component dma8237
+machine_add_component pit8253
+machine_add_component ppi8255
+machine_add_component pic8259
+
